--- a/law-text-html.html
+++ b/law-text-html.html
@@ -6,7 +6,7 @@
       <t4 type="content" name="Text" output="selective-output" modifiers="medialibrary,nav_sections" process-format="true" format="<div class=&quot; socialMediaIconsText&quot;>
 $value</div>" />
     </div>
-    <ul class="socialMediaIconsList">
+    <ul class="socialMediaIconsList d-flex justify-content-start">
       <t4 type='content' name='Facebook username' output='selective-output' process-format="true" format='<li class="iconFacebook">
   <a href="https://www.facebook.com/$value/" target="_blank">
     <span class="fa-stack <t4 type=&quot;content&quot; name=&quot;Icon Size&quot; output=&quot;normal&quot; display_field=&quot;value&quot; />">
